# vines

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/common/: file.rs  image.rs  json.rs  mod.rs  result.rs
src/core/: mod.rs
src/core/manager/: item.rs  mod.rs  repo.rs  resource.rs  tag.rs  user.rs
src/core/repository/: holder.rs  item.rs  item_tag_relation.rs  mod.rs  repo.rs  tag.rs  user.rs  user_repo_role.rs
src/core/service/: item.rs  mod.rs  repo.rs  tag.rs  user.rs
src/feature/web/: mod.rs
src/feature/web/backend/: item.rs  mod.rs  repo.rs  tag.rs  user.rs
src/feature/web/frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
src/feature/web/frontend/app/: globals.css  iconfont.css  layout.tsx  not-found.tsx  page.tsx
src/feature/web/frontend/app/pages/: layout.tsx
src/feature/web/frontend/app/pages/home/: page.tsx
src/feature/web/frontend/common/: common.tsx
src/feature/web/frontend/components/button/: index.tsx  style.css
src/feature/web/frontend/components/input/: index.tsx  style.css
src/feature/web/frontend/components/message/: index.tsx  style.css
src/feature/web/frontend/components/navigation/: index.tsx  style.css
src/feature/web/frontend/components/tag/: index.tsx  style.css
src/feature/web/frontend/service/: index.ts
src/feature/web/frontend/service/repo/: index.ts
src/feature/web/frontend/service/user/: index.ts
