[package]
name = "vines"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "^0.8.0"
md5 = "^0.7.0"
rusqlite = "^0.32.0"
r2d2 = "^0.8.0"
r2d2_sqlite = "^0.25.0"
actix-web = "^4.9.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0"
once_cell = "^1.20.0"
uuid = { version = "^1.10.0", features = ["v4"] }
image = "^0.25.0"
chrono = { version = "^0.4.0", features = ["serde"] }
env_logger = "^0.10.0"
log = "^0.4.0"
colored = "^2.1.0"
futures-core = "^0.3.0"
bytes = "^1.7.0"
either = "^1.8.0"